packages/rust/crates/xiuxian-wendao/tests/snapshots/scenarios__048_search_strat_path_fuzzy_handles_duplicate_headings.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario.rs
description: "Scenario 048_search_strat_path_fuzzy_handles_duplicate_headings [search_match_strategies]: path fuzzy handles duplicate headings"
expression: result
info:
  id: 048_search_strat_path_fuzzy_handles_duplicate_headings
  name: path fuzzy handles duplicate headings
  category: search_match_strategies
  description: search_match_strategies scenario
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/048_search_strat_path_fuzzy_handles_duplicate_headings/scenario.toml
---
{
  "category": "search_match_strategies",
  "files": [],
  "scenario_id": "048_search_strat_path_fuzzy_handles_duplicate_headings",
  "status": "validated"
}
