packages/rust/crates/xiuxian-wendao/tests/snapshots/scenarios__050_search_strat_path_fuzzy_prefers_path_and_section.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario.rs
description: "Scenario 050_search_strat_path_fuzzy_prefers_path_and_section [search_match_strategies]: path fuzzy prefers path and section"
expression: result
info:
  id: 050_search_strat_path_fuzzy_prefers_path_and_section
  name: path fuzzy prefers path and section
  category: search_match_strategies
  description: search_match_strategies scenario
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/050_search_strat_path_fuzzy_prefers_path_and_section/scenario.toml
---
{
  "category": "search_match_strategies",
  "files": [],
  "scenario_id": "050_search_strat_path_fuzzy_prefers_path_and_section",
  "status": "validated"
}
