packages/rust/crates/xiuxian-wendao/tests/snapshots/scenarios__051_search_strat_regex_strategy.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario.rs
description: "Scenario 051_search_strat_regex_strategy [search_match_strategies]: regex strategy"
expression: result
info:
  id: 051_search_strat_regex_strategy
  name: regex strategy
  category: search_match_strategies
  description: search_match_strategies scenario
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/051_search_strat_regex_strategy/scenario.toml
---
{
  "category": "search_match_strategies",
  "files": [],
  "scenario_id": "051_search_strat_regex_strategy",
  "status": "validated"
}
