packages/rust/crates/xiuxian-wendao/tests/snapshots/scenarios__054_seed_structural_priors_architecture_hub.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario.rs
description: "Scenario 054_seed_structural_priors_architecture_hub [seed_and_priors]: structural priors architecture hub"
expression: result
info:
  id: 054_seed_structural_priors_architecture_hub
  name: structural priors architecture hub
  category: seed_and_priors
  description: seed_and_priors scenario
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/054_seed_structural_priors_architecture_hub/scenario.toml
---
{
  "category": "seed_and_priors",
  "files": [],
  "scenario_id": "054_seed_structural_priors_architecture_hub",
  "status": "validated"
}
