packages/rust/crates/xiuxian-wendao/tests/snapshots/scenarios__057_tree_scope_mixed_scope_collapse_toggle.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario.rs
description: "Scenario 057_tree_scope_mixed_scope_collapse_toggle [tree_scope_filters]: mixed scope collapse toggle"
expression: result
info:
  id: 057_tree_scope_mixed_scope_collapse_toggle
  name: mixed scope collapse toggle
  category: tree_scope_filters
  description: tree_scope_filters scenario
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/057_tree_scope_mixed_scope_collapse_toggle/scenario.toml
---
{
  "category": "tree_scope_filters",
  "files": [],
  "scenario_id": "057_tree_scope_mixed_scope_collapse_toggle",
  "status": "validated"
}
