packages/rust/crates/xiuxian-wendao/tests/snapshots/scenarios__058_tree_scope_section_scope_per_doc_cap.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario.rs
description: "Scenario 058_tree_scope_section_scope_per_doc_cap [tree_scope_filters]: section scope per doc cap"
expression: result
info:
  id: 058_tree_scope_section_scope_per_doc_cap
  name: section scope per doc cap
  category: tree_scope_filters
  description: tree_scope_filters scenario
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/058_tree_scope_section_scope_per_doc_cap/scenario.toml
---
{
  "category": "tree_scope_filters",
  "files": [],
  "scenario_id": "058_tree_scope_section_scope_per_doc_cap",
  "status": "validated"
}
